--- a/data/site-settings.json
+++ b/data/site-settings.json
@@ -1,7 +1,7 @@
 {
   "siteName": "Prasanna Mobile Shop",
-  "tagline": "Your Trusted Mobile Store in Ja-Ela",
-  "description": "Quality mobile accessories, chargers, covers, and expert repairs. Visit us today for genuine products at affordable prices.",
+  "tagline": "Your Trusted Cake in Ja-Ela",
+  "description": "Quality mobile accessories, chargers, covers, and expert repairs. Visit us today for genuine products at affordable prices. +++",
   "contact": {
     "phone": "072 290 2299",
     "phoneInternational": "+94722902299",
@@ -30,5 +30,5 @@
     "rating": "5.0",
     "reviewsCount": ""
   },
-  "updatedAt": "2025-12-26T07:01:41.959Z"
+  "updatedAt": "2025-12-26T07:04:50.006Z"
 }
