--- a/data/site-settings.json
+++ b/data/site-settings.json
@@ -1,7 +1,7 @@
 {
   "siteName": "Prasanna Mobile Shop",
-  "tagline": "Your Trusted Cake in Ja-Ela",
-  "description": "Quality mobile accessories, chargers, covers, and expert repairs. Visit us today for genuine products at affordable prices. +++",
+  "tagline": "Your Trusted Cake in Gampaha",
+  "description": "Quality mobile accessories, chargers, covers, and expert repairs. Visit us today for genuine products at affordable prices. ",
   "contact": {
     "phone": "072 290 2299",
     "phoneInternational": "+94722902295",
@@ -30,5 +30,5 @@
     "rating": "5.0",
     "reviewsCount": ""
   },
-  "updatedAt": "2025-12-26T07:26:27.710Z"
+  "updatedAt": "2025-12-26T07:44:45.105Z"
 }
