--- a/data/theme-settings.json
+++ b/data/theme-settings.json
@@ -1,4 +1,4 @@
 {
-  "colorTheme": "amber",
-  "updatedAt": "2025-12-26T06:58:38.237Z"
+  "colorTheme": "rose",
+  "updatedAt": "2025-12-27T04:00:33.469Z"
 }
